Gitignore build files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ArchiveThis/Debug/
 ArchiveThis/Release/ArchiveThis.tlog/ArchiveThis.lastbuildstate
 ArchiveThis/Release/
 Release/
+ArchiveThis/x64/
